@@ -51,16 +51,12 @@ class tx_community_controller_GroupProfileApplication extends tx_community_contr
 	public function execute() {
 		$content = '';
 
-		$applicationManagerClass = t3lib_div::makeInstanceClassName('tx_community_ApplicationManager');
-		$applicationManager      = call_user_func(array($applicationManagerClass, 'getInstance'));
-		/* @var $applicationManager tx_community_ApplicationManager */
-
 		$widgetName = $this->pi_getFFvalue(
 			$this->data['pi_flexform'],
 			'widget'
 		);
 
-		$widgetConfiguration = $applicationManager->getWidgetConfiguration(
+		$widgetConfiguration = $GLOBALS['TX_COMMUNITY']['applicationManager']->getWidgetConfiguration(
 			$this->name,
 			$widgetName
 		);
