@@ -59,13 +59,7 @@ class tx_community_controller_ListGroupsApplication extends tx_community_control
 	public function execute() {
 		$content = '';
 
-		$applicationManagerClass = t3lib_div::makeInstanceClassName('tx_community_ApplicationManager');
-		$applicationManager      = call_user_func(array($applicationManagerClass, 'getInstance'));
-		/* @var $applicationManager tx_community_ApplicationManager */
-
-		$this->groupGateway = t3lib_div::makeInstance('tx_community_model_GroupGateway');
-
-		$applicationConfiguration = $applicationManager->getApplicationConfiguration(
+		$applicationConfiguration = $GLOBALS['TX_COMMUNITY']['applicationManager']->getApplicationConfiguration(
 			$this->getName()
 		);
 
