@@ -58,11 +58,7 @@ class tx_community_controller_NewGroupApplication extends tx_community_controlle
 	public function execute() {
 		$content = '';
 
-		$applicationManagerClass = t3lib_div::makeInstanceClassName('tx_community_ApplicationManager');
-		$applicationManager      = call_user_func(array($applicationManagerClass, 'getInstance'));
-		/* @var $applicationManager tx_community_ApplicationManager */
-
-		$applicationConfiguration = $applicationManager->getApplicationConfiguration(
+		$applicationConfiguration = $GLOBALS['TX_COMMUNITY']['applicationManager']->getApplicationConfiguration(
 			$this->getName()
 		);
 
